--- a/documentacao/exemplo.html
+++ b/documentacao/exemplo.html
@@ -1,3 +1,434 @@
-<html>
-<h1>EXEMPLO</h1>
+<html xmlns:o="urn:schemas-microsoft-com:office:office"
+xmlns:x="urn:schemas-microsoft-com:office:excel"
+xmlns="http://www.w3.org/TR/REC-html40">
+
+<head>
+<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+<meta name=ProgId content=Excel.Sheet>
+<meta name=Generator content="Microsoft Excel 15">
+<link rel=File-List href="Diário_arquivos/filelist.xml">
+<style id="Diário_9742_Styles">
+<!--table
+	{mso-displayed-decimal-separator:"\,";
+	mso-displayed-thousand-separator:"\.";}
+.xl159742
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:11.0pt;
+	font-weight:400;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Calibri, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:General;
+	text-align:general;
+	vertical-align:bottom;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+.xl639742
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:11.0pt;
+	font-weight:700;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Calibri, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:General;
+	text-align:general;
+	vertical-align:bottom;
+	border:.5pt solid windowtext;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+.xl649742
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:11.0pt;
+	font-weight:400;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Calibri, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:General;
+	text-align:general;
+	vertical-align:bottom;
+	border:.5pt solid windowtext;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+.xl659742
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:11.0pt;
+	font-weight:700;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Calibri, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:General;
+	text-align:general;
+	vertical-align:bottom;
+	border-top:1.0pt solid windowtext;
+	border-right:.5pt solid windowtext;
+	border-bottom:.5pt solid windowtext;
+	border-left:1.0pt solid windowtext;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+.xl669742
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:11.0pt;
+	font-weight:700;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Calibri, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:General;
+	text-align:general;
+	vertical-align:bottom;
+	border-top:1.0pt solid windowtext;
+	border-right:.5pt solid windowtext;
+	border-bottom:.5pt solid windowtext;
+	border-left:.5pt solid windowtext;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+.xl679742
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:11.0pt;
+	font-weight:400;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Calibri, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:General;
+	text-align:general;
+	vertical-align:bottom;
+	border-top:1.0pt solid windowtext;
+	border-right:1.0pt solid windowtext;
+	border-bottom:.5pt solid windowtext;
+	border-left:.5pt solid windowtext;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+.xl689742
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:11.0pt;
+	font-weight:700;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Calibri, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:General;
+	text-align:general;
+	vertical-align:bottom;
+	border-top:.5pt solid windowtext;
+	border-right:.5pt solid windowtext;
+	border-bottom:.5pt solid windowtext;
+	border-left:1.0pt solid windowtext;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+.xl699742
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:11.0pt;
+	font-weight:400;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Calibri, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:General;
+	text-align:general;
+	vertical-align:bottom;
+	border-top:.5pt solid windowtext;
+	border-right:1.0pt solid windowtext;
+	border-bottom:.5pt solid windowtext;
+	border-left:.5pt solid windowtext;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+.xl709742
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:11.0pt;
+	font-weight:400;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Calibri, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:General;
+	text-align:general;
+	vertical-align:bottom;
+	border-top:.5pt solid windowtext;
+	border-right:.5pt solid windowtext;
+	border-bottom:.5pt solid windowtext;
+	border-left:1.0pt solid windowtext;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+.xl719742
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:11.0pt;
+	font-weight:400;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Calibri, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:General;
+	text-align:general;
+	vertical-align:bottom;
+	border-top:.5pt solid windowtext;
+	border-right:.5pt solid windowtext;
+	border-bottom:1.0pt solid windowtext;
+	border-left:1.0pt solid windowtext;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+.xl729742
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:11.0pt;
+	font-weight:400;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Calibri, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:General;
+	text-align:general;
+	vertical-align:bottom;
+	border-top:.5pt solid windowtext;
+	border-right:.5pt solid windowtext;
+	border-bottom:1.0pt solid windowtext;
+	border-left:.5pt solid windowtext;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+.xl739742
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:11.0pt;
+	font-weight:400;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Calibri, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:General;
+	text-align:general;
+	vertical-align:bottom;
+	border-top:.5pt solid windowtext;
+	border-right:1.0pt solid windowtext;
+	border-bottom:1.0pt solid windowtext;
+	border-left:.5pt solid windowtext;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+-->
+</style>
+</head>
+
+<body>
+<!--[if !excel]>&nbsp;&nbsp;<![endif]-->
+<!--As seguintes informações foram geradas pelo Assistente para Publicação como
+Página da Web do Microsoft Excel.-->
+<!--Se o mesmo item for republicado a partir do Excel, todas as informações
+entre as marcas DIV serão substituídas.-->
+<!----------------------------->
+<!--INÍCIO DA SAÍDA DO 'ASSISTENTE PARA PUBLICAÇÃO COMO PÁGINA DA WEB' DO EXCEL
+-->
+<!----------------------------->
+
+<div id="Diário_9742" align=center x:publishsource="Excel">
+
+<table border=0 cellpadding=0 cellspacing=0 width=526 style='border-collapse:
+ collapse;table-layout:fixed;width:394pt'>
+ <col width=83 style='mso-width-source:userset;mso-width-alt:3035;width:62pt'>
+ <col width=155 style='mso-width-source:userset;mso-width-alt:5668;width:116pt'>
+ <col width=288 style='mso-width-source:userset;mso-width-alt:10532;width:216pt'>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl659742 width=83 style='height:15.0pt;width:62pt'>Grupo
+  1:</td>
+  <td class=xl669742 width=155 style='border-left:none;width:116pt'>Vendas</td>
+  <td class=xl679742 width=288 style='border-left:none;width:216pt'>Parcelas a
+  Receber</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl689742 style='height:15.0pt;border-top:none'>Bruno</td>
+  <td class=xl639742 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl699742 style='border-top:none;border-left:none'>Nota Fiscal de
+  Produto</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl709742 style='height:15.0pt;border-top:none'>&nbsp;</td>
+  <td class=xl649742 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl699742 style='border-top:none;border-left:none'>Nota Fiscal de
+  Serviço</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl709742 style='height:15.0pt;border-top:none'>&nbsp;</td>
+  <td class=xl649742 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl699742 style='border-top:none;border-left:none'>Serviços</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl709742 style='height:15.0pt;border-top:none'>&nbsp;</td>
+  <td class=xl649742 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl699742 style='border-top:none;border-left:none'>Estoque</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl689742 style='height:15.0pt;border-top:none'>Grupo 2:</td>
+  <td class=xl639742 style='border-top:none;border-left:none'>Vendas</td>
+  <td class=xl699742 style='border-top:none;border-left:none'>Ordem de Serviço</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl689742 style='height:15.0pt;border-top:none'>Hilqueslei</td>
+  <td class=xl639742 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl699742 style='border-top:none;border-left:none'>Vendas e
+  Orçamentos</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl709742 style='height:15.0pt;border-top:none'>&nbsp;</td>
+  <td class=xl649742 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl699742 style='border-top:none;border-left:none'>Clientes</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl709742 style='height:15.0pt;border-top:none'>&nbsp;</td>
+  <td class=xl649742 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl699742 style='border-top:none;border-left:none'>Produtos</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl689742 style='height:15.0pt;border-top:none'>Grupo 3:</td>
+  <td class=xl639742 style='border-top:none;border-left:none'>Compras</td>
+  <td class=xl699742 style='border-top:none;border-left:none'>Compras</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl689742 style='height:15.0pt;border-top:none'>Alexandre</td>
+  <td class=xl639742 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl699742 style='border-top:none;border-left:none'>Parcelas a Pagar</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl709742 style='height:15.0pt;border-top:none'>&nbsp;</td>
+  <td class=xl649742 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl699742 style='border-top:none;border-left:none'>Fornecedores</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl709742 style='height:15.0pt;border-top:none'>&nbsp;</td>
+  <td class=xl649742 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl699742 style='border-top:none;border-left:none'>Serviços</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl709742 style='height:15.0pt;border-top:none'>&nbsp;</td>
+  <td class=xl649742 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl699742 style='border-top:none;border-left:none'>Transportadoras</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl709742 style='height:15.0pt;border-top:none'>&nbsp;</td>
+  <td class=xl649742 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl699742 style='border-top:none;border-left:none'>Estoque</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl689742 style='height:15.0pt;border-top:none'>Grupo 4:</td>
+  <td class=xl639742 style='border-top:none;border-left:none'>Financeiro</td>
+  <td class=xl699742 style='border-top:none;border-left:none'>Movimentações</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl689742 style='height:15.0pt;border-top:none'>Diogo</td>
+  <td class=xl639742 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl699742 style='border-top:none;border-left:none'>Contas Bancarias</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl709742 style='height:15.0pt;border-top:none'>&nbsp;</td>
+  <td class=xl649742 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl699742 style='border-top:none;border-left:none'>Extrato</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl709742 style='height:15.0pt;border-top:none'>&nbsp;</td>
+  <td class=xl649742 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl699742 style='border-top:none;border-left:none'>Contas a Pagar</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl709742 style='height:15.0pt;border-top:none'>&nbsp;</td>
+  <td class=xl649742 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl699742 style='border-top:none;border-left:none'>Contas a Receber</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl709742 style='height:15.0pt;border-top:none'>&nbsp;</td>
+  <td class=xl649742 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl699742 style='border-top:none;border-left:none'>Plano de
+  Categorias</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl689742 style='height:15.0pt;border-top:none'>Grupo 5:</td>
+  <td class=xl639742 style='border-top:none;border-left:none'>Relatórios</td>
+  <td class=xl699742 style='border-top:none;border-left:none'>Financeiro</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl689742 style='height:15.0pt;border-top:none'>Bruno
+  Lopes</td>
+  <td class=xl639742 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl699742 style='border-top:none;border-left:none'>Vendas</td>
+ </tr>
+ <tr height=21 style='height:15.75pt'>
+  <td height=21 class=xl719742 style='height:15.75pt;border-top:none'>&nbsp;</td>
+  <td class=xl729742 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl739742 style='border-top:none;border-left:none'>Estoque</td>
+ </tr>
+ <![if supportMisalignedColumns]>
+ <tr height=0 style='display:none'>
+  <td width=83 style='width:62pt'></td>
+  <td width=155 style='width:116pt'></td>
+  <td width=288 style='width:216pt'></td>
+ </tr>
+ <![endif]>
+</table>
+
+</div>
+
+
+<!----------------------------->
+<!--FIM DA SAÍDA DO 'ASSISTENTE PARA PUBLICAÇÃO COMO PÁGINA DA WEB' DO EXCEL-->
+<!----------------------------->
+</body>
+
 </html>
